tests/data/external-auth/ingress/mergeable-invalid-svc/ext-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    nginx.org/policies: "external-auth-policy-invalid-svc"
  name: ext-auth-ingress-master
spec:
  ingressClassName: nginx
  rules:
  - host: ext-auth-ingress.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ext-auth-ingress-minion
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: ext-auth-ingress.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
